fix: wrong font fallback

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,7 +3,7 @@ html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
-  font-family: 'Montserrat', serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 @media(min-width: 768px){
